<resources>
    <string name="app_name">Pesapal Payment Gateway</string>
    <string name="add_card_invalidEmail">Invalid Email</string>
    <string name="add_card_headerStepText">Step 1 of 3: Billing Address</string>
    <string name="add_card_firstName">First Name</string>
    <string name="add_card_surname">Last Name</string>
    <string name="add_card_email">Email Address</string>
    <string name="add_card_country">Country</string>
    <string name="add_card_phone">Phone Number</string>
    <string name="add_card_address">Address</string>
    <string name="add_card_postalCode">POSTAL/ZIP</string>
    <string name="add_card_postalCodelower">Postal / Zip Code</string>

    <string name="add_card_city">City</string>
    <string name="uri_is_null">Uri is NULL</string>
    <string name="user_not_registered">User Not Registered</string>
    <string name="add_a_friend">Add a Friend</string>
    <string name="change_card">Change Card</string>
    <string name="card_is_changed">Card changed</string>
    <string name="enable_card">Enable card</string>
    <string name="add_card">Add Card</string>
    <string name="allow_phone_symbols">0123456789+</string>

    <string name="current_card_nameOnCard">Name on Card</string>
    <string name="current_card_stepTwoHeader">Step 2 of 3: Card Details</string>
    <string name="current_card_cardNumber">CARD NUMBER</string>
    <string name="current_card_expiry">Expiry (MM/YY)</string>
    <string name="current_card_cvv">CVV</string>
    <string name="current_card_title">Add Card</string>

    <string name="hint_mm">MM</string>
    <string name="mm">MM</string>
    <string name="hint_yy">YY</string>

    <string name="current_card_stepThreeHeader">Step 3 of 3: Transaction Status</string>


    <string name="country_currency_dialog_title">Set your currency</string>
    <string name="new_card_invalidEmail">Invalid Email</string>

    <string name="current_mpesa_stepOneHeader">Step 1 of 3: Payment Details</string>
    <string name="current_mpesa_stepTwoHeader">Step 2 of 3: Payment Confirmation</string>
    <string name="current_mpesa_stepThreeHeader">Step 3 of 3: Transaction Status</string>


    <string name="provide_mobile_money">1. Provide your %s mobile number</string>
    <string name="provide_mobile_pin">3. Confirm the transaction by providing your \n %s PIN</string>
    <string name="enter_mobile_number">%s Phone Number</string>
    <!--    <string name="enter_mobile_number">Enter mobile Number</string>-->

    <string name="prompt_1">1. Payment prompt sent to phone %s</string>
    <string name="prompt_2">2. Confirm the transaction by entering your %s PIN</string>
    <string name="prompt3">3. If you didn\'t get a prompt, press resend prompt</string>
    <string name="prompt4">4. Click Lipa na Mpesa for manual instructions</string>

    <string name="mpesa_combo">1\. Go to M-PESA on your phone \n2. Select Pay Bill option. \n3. Enter Business number %1$s \n4. Enter Account Number %2$s \n5. Enter the amount %3$s %4$s \n6. Enter your M-PESA PIN and Send \n7. You will receive a confirmation SMS from M-PESA with confirmation code \n8. Click proceed to finalise payment </string>
    <string name="mtn_combo">1\. A payment prompt has been sent to %1$s \n2. In case you haven’t received a prompt, dial *165# to trigger the prompt again. Or tap resend payment prompt. \n3. Click proceed to finalise payment</string>

    <string name="pay">Pay\u0020</string>
    <string name="amount">Amount</string>
    <string name="label_select_payment">Click to select Your Preferred Payment Method</string>
    <string name="proceed">PROCEED</string>
    <string name="pesapal_is_regulated_by_the_central_bank_of_kenya">Pesapal is regulated by the Central Bank of Kenya</string>
    <string name="pesapal_is_regulated_by_the_uganda">Pesapal is regulated by the Bank of Uganda</string>
    <string name="billing_instruction">In order to process your credit card successfully, please ensure the billing information you provide below matches the billing address of your credit card.</string>
    <string name="demo">DEMO</string>
    <string name="resend_instructions">It seems you’ve closed the payment prompt sent to your phone  %s Kindly follow the payment instructions below or use the resend button to try send the prompt again.</string>
    <string name="resned_instructions">Incase you’ve not received a payment prompt, please Click Here to view payment instructions</string>
    <string name="resend_payment_prompt">Resend Payment Prompt</string>

    <string name="payment_succesful">PAYMENT SUCCESFUL</string>
    <string name="payment_failed">PAYMENT FAILED</string>

    <string name="help_url">For further assistance, kindly contact us via our ticketing portal on %s</string>
    <string name="open_ticket">Click Here to open a ticket.</string>
    <string name="exit">EXIT</string>
    <string name="merchant_reference">MERCHANT  REFERENCE</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="tracking_id">TRACKING ID</string>
    <string name="i_accept_to_pesapal_s">I accept Pesapal\'s\u0020</string>
    <string name="remember_me">REMEMBER ME</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="terms_and_conditions_amp">TERMS &amp; CONDITIONS</string>
    <string name="open_ticket_label">OPEN TICKET</string>
    <string name="save_my_card_for_faster_checkout_next_time">Save my card for faster checkout next time</string>
    <string name="info">Info</string>
    <string name="card_desc">Opt to save your card and enjoy a seamless checkout experience without the hassle of re-entering details again. Your card information shall be securely encrypted, ensuring a safe and convenient checkout process for your future purchases.</string>
    <string name="confirmation_code">confirmation code</string>
    <string name="ok">OK</string>
    <string name="dialog_okay">OK</string>

</resources>