<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/dark_faded_bg"
    android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llTitleBarNewCard"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="19dp"
                    android:text="@string/add_card_headerStepText"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/clMpesaMethod"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llTitleBarNewCard"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/white"
                android:elevation="0dp"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/llInputNewCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="27dp"
                android:layout_marginEnd="27dp"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/AppTheme.App.TextInputLayout"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_firstName"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_surname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_surname"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="40"
                        android:maxLines="1"
                        android:nextFocusDown="@id/et_phone_number"
                        android:paddingStart="15dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:focusable="false"
                    android:focusableInTouchMode="false">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode_picker"
                        android:layout_width="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp"
                        app:ccp_defaultNameCode="KE"
                        app:ccp_textSize="12sp"
                        app:ccp_defaultLanguage="ENGLISH"
                        app:ccp_autoDetectCountry="true"
                        app:ccp_autoDetectLanguage="true"
                        app:ccp_showFullName="true"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_height="wrap_content"
                        app:ccp_countryPreference="KE,UG,TZ"
                        app:ccp_rememberLastSelection="true"
                    />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    style="@style/AppTheme.App.TextInputLayout"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.santalu.maskedittext.MaskEditText
                        android:id="@+id/et_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="@string/allow_phone_symbols"
                        android:hint="@string/add_card_phone"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="15"
                        android:text="+254112826460"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTheme.App.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_card_address"
                        android:inputType="textPostalAddress"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:paddingStart="15dp"
                        android:textSize="12sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/postal_code_layout"
                        style="@style/AppTheme.App.TextInputLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_postal"
                            android:layout_width="145dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_card_postalCode"
                            android:inputType="textPostalAddress"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:nextFocusDown="@id/et_city"
                            android:paddingStart="15dp"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/AppTheme.App.TextInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout.V3">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_card_city"
                            android:inputType="text"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:paddingStart="15dp"
                            android:textSize="12sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/acbNextStep"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/view_button_inactive"
                android:text="Next"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llInputNewCard" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
