<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="4dp"
    android:background="@color/white">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       >
       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/linear_card_pay"
           style="@style/layout_payment_outer"

           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           >

           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:id="@+id/icon_visa"
               android:src="@drawable/ic_visa"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintBottom_toBottomOf="parent"
               />

           <ImageView
               android:layout_width="29dp"
               android:layout_height="29dp"
               android:id="@+id/icon_amex"
               android:src="@drawable/amex"
               android:layout_marginStart="10dp"
               app:layout_constraintStart_toEndOf="@+id/icon_visa"
               app:layout_constraintTop_toTopOf="@id/icon_visa"
               app:layout_constraintBottom_toBottomOf="@id/icon_visa"
               />

           <ImageView
               android:layout_width="35dp"
               android:layout_height="35dp"
               android:layout_marginStart="10dp"
               android:src="@drawable/ic_mastercard"
               app:layout_constraintStart_toEndOf="@+id/icon_amex"
               app:layout_constraintTop_toTopOf="@id/icon_visa"
               app:layout_constraintBottom_toBottomOf="@id/icon_visa"
               />

           <ImageView
               android:layout_width="29dp"
               android:layout_height="29dp"
               android:src="@drawable/ic_checked"

               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@id/icon_visa"
               app:layout_constraintBottom_toBottomOf="@id/icon_visa"
               />
       </androidx.constraintlayout.widget.ConstraintLayout>

       <androidx.cardview.widget.CardView
           style="@style/payment_card"
           android:id="@+id/card_outer"
           android:visibility="gone"
           tools:visibility="visible"
           app:layout_constraintTop_toBottomOf="@id/linear_card_pay"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:paddingVertical="21dp"
               style="@style/linear_payment_footer"

               >



               <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@drawable/rounded_blue_billing"
                   android:paddingVertical="11dp"
                   android:paddingHorizontal="9dp"
                   >

                   <View
                       android:layout_width="1dp"
                       android:layout_height="match_parent"
                       android:background="@color/blue_pesapal_light"

                       />
                   <TextView
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="2"
                       android:text="@string/billing_instruction"
                       android:textColor="@color/black_faded"
                       android:layout_marginStart="9dp"
                       android:fontFamily="@font/arial"
                       android:textSize="12sp"
                       android:textFontWeight="400"
                       />
               </LinearLayout>

               <TextView
                   android:text="@string/add_card_firstName"
                   style="@style/label_card"
                   />

               <EditText
                   android:id="@id/et_first_name"
                   android:hint="@string/add_card_firstName"
                   style="@style/et_card"
                   />

               <TextView
                   android:text="@string/add_card_surname"
                   style="@style/label_card"
                   />

               <EditText
                   android:id="@id/et_surname"
                   android:hint="@string/add_card_surname"
                   style="@style/et_card"
                   />

<!--               <TextView-->
<!--                   android:text="@string/add_card_email"-->
<!--                   style="@style/label_card"-->
<!--                   />-->

<!--               <EditText-->
<!--                   android:id="@id/add_card_email"-->
<!--                   android:hint="@string/add_card_email"-->
<!--                   android:nextFocusDown="@id/et_phone_number"-->
<!--                   android:inputType="textEmailAddress"-->

<!--                   style="@style/et_card"-->
<!--                   />-->

<!--               <TextView-->
<!--                   android:text="@string/add_card_country"-->
<!--                   style="@style/label_card"-->
<!--                   />-->

<!--               <EditText-->
<!--                   android:id="@id/add_card_country"-->
<!--                   android:hint="@string/add_card_country"-->

<!--                   style="@style/et_card"-->
<!--                   />-->


<!--               <TextView-->
<!--                   android:text="@string/add_card_country"-->
<!--                   style="@style/label_card"-->
<!--                   />-->

<!--               <EditText-->
<!--                   android:id="@id/lll"-->
<!--                   android:hint="@string/add_card_country"-->
<!--                   style="@style/et_card"-->
<!--                   />-->

               <TextView
                   android:text="@string/add_card_phone"
                   style="@style/label_card"
                   />



<!--               <com.santalu.maskedittext.MaskEditText-->
<!--                   android:id="@+id/et_phone_number"-->
<!--                   style="@style/et_card"-->

<!--                   android:digits="@string/allow_phone_symbols"-->
<!--                   android:hint="@string/add_card_phone"-->
<!--                   android:imeOptions="actionNext"-->
<!--                   android:inputType="phone"-->
<!--                   android:maxLength="15"-->
<!--                   android:maxLines="1"-->
<!--                   android:paddingStart="15dp"-->
<!--                   />-->

               <TextView
                   android:text="@string/add_card_address"
                   style="@style/label_card"
                   />


               <EditText
                   android:id="@+id/et_address"
                   style="@style/et_card"
                   android:hint="@string/add_card_address"
                   android:inputType="textPostalAddress"
                   android:maxLength="50"
                   android:maxLines="1"
                   />

               <TextView
                   android:text="@string/add_card_postalCode"
                   style="@style/label_card"
                   />

               <EditText
                   android:id="@+id/et_postal"
                   android:hint="@string/add_card_postalCodelower"
                   android:inputType="textPostalAddress"
                   android:maxLength="6"
                   android:nextFocusDown="@id/et_city"
                   style="@style/et_card"
                   />


               <TextView
                   android:text="@string/add_card_postalCode"
                   style="@style/label_card"
                   />

               <EditText
                   android:id="@+id/et_city"
                   style="@style/et_card"
                   android:hint="@string/add_card_city"
                   android:inputType="text"
                   android:maxLength="50"
                   />
               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:focusable="false"
                   android:focusableInTouchMode="false">

                   <com.hbb20.CountryCodePicker
                       android:id="@+id/countryCode_picker"
                       android:layout_width="0dp"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintEnd_toEndOf="parent"
                       android:layout_marginTop="10dp"
                       app:ccp_defaultNameCode="KE"
                       app:ccp_showFlag="false"
                       app:ccp_showNameCode="false"
                       app:ccp_textSize="12sp"
                       app:ccp_defaultLanguage="ENGLISH"
                       app:ccp_autoDetectCountry="true"
                       app:ccp_autoDetectLanguage="true"
                       app:ccp_showFullName="true"
                       app:layout_constraintStart_toStartOf="parent"
                       android:layout_height="wrap_content"
                       app:ccp_countryPreference="KE,UG,TZ"
                       app:ccp_rememberLastSelection="true"
                       />
               </androidx.constraintlayout.widget.ConstraintLayout>






               <androidx.constraintlayout.widget.ConstraintLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:id="@+id/linear_tos"
                   android:orientation="vertical"
                   android:layout_marginTop="13dp"
                   >
                   <Switch
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:id="@+id/switch_accept"
                       android:backgroundTint="@color/blue_pesapal"
                       app:layout_constraintStart_toStartOf="parent"
                       app:layout_constraintTop_toTopOf="parent"
                       app:layout_constraintEnd_toStartOf="@+id/linear_terms"
                       />



                   <LinearLayout
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:id="@+id/linear_terms"
                       android:layout_marginBottom="43dp"
                       android:gravity="center"
                       android:orientation="horizontal"
                       app:layout_constraintStart_toEndOf="@+id/switch_accept"
                       app:layout_constraintTop_toTopOf="@+id/switch_accept"
                       app:layout_constraintEnd_toEndOf="parent"
                       >
                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:gravity="center"
                           android:text="I accept to Pesapal\'s "
                           android:textSize="14sp" />

                       <TextView
                           android:id="@+id/privacy_policy"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="Privacy"
                           android:textColor="@color/blue_pesapal"
                           android:textSize="14sp" />

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text=" &amp; "
                           android:textSize="14sp" />

                       <TextView
                           android:id="@+id/terms_of_service"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="Terms and conditions"
                           android:textColor="@color/blue_pesapal"
                           android:textSize="14sp" />

                   </LinearLayout>
               </androidx.constraintlayout.widget.ConstraintLayout>


               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/btn_proceed"

                   android:text="@string/proceed"
                   style="@style/button_proceed"
                   />

           </LinearLayout>
       </androidx.cardview.widget.CardView>
   </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>